objects/FPO_Order_Line__c.object
<CustomObject>
    <fields>
        <fullName>Item_Number__c</fullName>
        <description>TPS Phase 2- This field will capture the service line item number</description>
        <label>Item Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Payment__c</fullName>
        <label>Lease Payment</label>
        <referenceTo>LeasePayment__c</referenceTo>
        <relationshipLabel>FPO Order Lines</relationshipLabel>
        <relationshipName>FPO_Order_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Line_Id__c</fullName>
        <description>TPS Phase 2- Unique Id form Oracle for FPO lines</description>
        <externalId>true</externalId>
        <label>Line Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MileStone__c</fullName>
        <label>MileStone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Amount__c</fullName>
        <description>It&apos;s field to store purchase order amount from Oracle.</description>
        <label>PO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Creation_Date__c</fullName>
        <description>It&apos;s field to store purchase order creation date from Oracle.</description>
        <label>PO Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Receipt_Date__c</fullName>
        <description>It&apos;s field to store purchase order receipt date from Oracle.</description>
        <label>PO Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Receipt__c</fullName>
        <description>It&apos;s field to store purchase order receipt number from Oracle.</description>
        <label>PO Receipt #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <description>It&apos;s field to store purchase order number from Oracle.</description>
        <label>PO#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <description>It&apos;s field to store payment amount from Oracle</description>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <description>It&apos;s field to store purchase order number from Oracle.</description>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule_Payment_Date__c</fullName>
        <label>Schedule Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supplier_Invoice_Amount__c</fullName>
        <description>TPS Phae 2- This field will be populated by SOA. This is the supplier amount for the supplier.</description>
        <label>Supplier Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Invoice__c</fullName>
        <description>TPS; Supplier Invoice number per supplier</description>
        <label>Supplier Invoice #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Type__c</fullName>
        <description>TPS: This field captures the vendor type- TPS. DRIP or IP. We use this field to display fees information to the respective Vendor.</description>
        <label>Vendor Type</label>
        <picklist>
            <picklistValues>
                <fullName>TPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>TPS: Field to capture Oracle vendor number; populated by SOA</description>
        <inlineHelpText>Vendor Name</inlineHelpText>
        <label>Vendor #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>FPO Order Line</label>
    <nameField>
        <displayFormat>FPOL-{000000}</displayFormat>
        <label>FPO Order Lines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FPO Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>